Add Scheme Pearl: Quantum Continuations

--- a/bbt.bib
+++ b/bbt.bib
@@ -453,6 +453,18 @@
   bibsource = qplbib
 }
 
+@misc{Choudhury2022a,
+  title     = {Scheme Pearl: Quantum Continuations},
+  author    = {Choudhury, Vikraman and Sabry, Amr and Agapiev, Borislav},
+  year      = {2022},
+  month     = sep,
+  url       = {https://andykeep.com/SchemeWorkshop2022/scheme2022-final37.pdf},
+  abstract  = {We advance the thesis that the simulation of quantum circuits is fundamentally about the efficient management of a large (potentially exponential) number of delimited continuations. The family of Scheme languages, with its efficient implementations of first-class continuations and with its imperative constructs, provides an elegant host for modeling and simulating quantum circuits.},
+  note      = {2022 Workshop on Scheme and Functional Programming},
+  webnote   = {2022 Workshop on Scheme and Functional Programming},
+  bibsource = qplbib
+}
+
 @misc{CirqDevelopers2018,
   title     = {Cirq},
   author    = {{Cirq Developers}},
