--- a/biblatex.bib
+++ b/biblatex.bib
@@ -589,6 +589,138 @@
   bibsource    = qplbib
 }
 
+@inproceedings{DiazCaro2011,
+  title         = {Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits},
+  author        = {D{\'i}az-Caro, Alejandro and Arrighi, Pablo and Gadella, Manuel and Grattage, Jonathan},
+  date          = {2011-02},
+  booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
+  publisher     = {Elsevier},
+  series        = entcs,
+  volume        = {270},
+  number        = {1},
+  pages         = {59--74},
+  doi           = {10.1016/j.entcs.2011.01.006},
+  archiveprefix = {arXiv},
+  eprint        = {},
+  abstract      = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
+  keywords      = {measurement, quantum lambda calculus, confluence, probabilistic rewrite system},
+  bibsource     = qplbib
+}
+
+@inproceedings{DiazCaro2017,
+  title     = {Typing Quantum Superpositions and Measurement},
+  author    = {D{\'i}az-Caro, Alejandro and Dowek, Gilles},
+  date      = {2017-11},
+  booktitle = {Theory and Practice of Natural Computing (TPNC 2017)},
+  editor    = {Mart{\'i}n-Vide, Carlos and Neruda, Roman and Vega-Rodr{\'i}guez, Miguel A.},
+  publisher = sprintl,
+  address   = {Cham},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {10687},
+  pages     = {281--293},
+  doi       = {10.1007/978-3-319-71069-3_22},
+  abstract  = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
+  keywords  = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
+  bibsource = qplbib
+}
+
+@inproceedings{DiazCaro2017a,
+  title     = {A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls},
+  author    = {D{\'i}az-Caro, Alejandro},
+  date      = {2017-11},
+  booktitle = {Programming Languages and Systems (APLAS 2017)},
+  editor    = {Chang, Bor-Yuh Evan},
+  publisher = sprintl,
+  address   = {Cham},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {10695},
+  pages     = {448--467},
+  doi       = {10.1007/978-3-319-71237-6_22},
+  abstract  = {In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, $\lambda_\rho$, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for programs as density matrices and functions upon them. The second one, $\lambda^\circ_\rho$, take advantage of the density matrices presentation in order to follow the mixed trace of programs in a kind of generalised density matrix. Such a control can be seen as a weaker form of the quantum control and data approach.},
+  keywords  = {lambda calculus, quantum computing, density matrices, classical control},
+  bibsource = qplbib
+}
+
+@inproceedings{DiazCaro2019,
+  title         = {Realizability in the Unitary Sphere},
+  author        = {D{\'i}az-Caro, Alejandro and Guillermo, Mauricio and Miquel, Alexandre and Valiron, Beno{\^i}t},
+  date          = {2019-06},
+  booktitle     = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
+  publisher     = ieee,
+  address       = {Los Alamitos, CA, USA},
+  series        = {{{LICS}} '19},
+  eid           = {56},
+  pages         = {56},
+  numpages      = {13},
+  doi           = {10.1109/LICS.2019.8785834},
+  archiveprefix = {arXiv},
+  eprint        = {1904.08785},
+  abstract      = {In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a notion of unitarity in the system, answering a long standing issue. We derive from the semantics a set of typing rules for a simply-typed linear algebraic lambda-calculus, and show how it extends both to classical and quantum lambda-calculi.},
+  keywords      = {lambda calculus, linear algebra, realizability,
+                   typing rules, simply-typed linear algebraic lambda-calculus, classical lambda-calculi, quantum lambda-calculi, unitary},
+  bibsource     = qplbib
+}
+
+@article{DiazCaro2019a,
+  title        = {Two linearities for quantum computing in the lambda calculus},
+  author       = {D{\'i}az-Caro, Alejandro and Dowek, Gilles and Rinaldi, Juan Pablo},
+  date         = {2019-12},
+  journaltitle = {Biosystems},
+  volume       = {186},
+  eid          = {104012},
+  pages        = {104012},
+  doi          = {10.1016/j.biosystems.2019.104012},
+  abstract     = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
+  keywords     = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
+  note         = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
+  bibsource    = qplbib
+}
+
+@inproceedings{DiazCaro2021,
+  title     = {A New Connective in Natural Deduction, and Its Application to Quantum Computing},
+  author    = {D{\'i}az-Caro, Alejandro and Dowek, Gilles},
+  date      = {2021-08},
+  booktitle = {Theoretical Aspects of Computing -- ICTAC 2021},
+  editor    = {Cerone, Antonio and {\"O}lveczky, Peter Csaba},
+  publisher = sprintl,
+  address   = {Cham},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12819},
+  pages     = {175--193},
+  doi       = {10.1007/978-3-030-85315-0_11},
+  abstract  = {We investigate an unsuspected connection between non-harmonious logical connectives, such as Prior's tonk, and quantum computing. We argue that non-harmonious connectives model the information erasure, the non-reversibility, and the non-determinism that occur, among other places, in quantum measurement. We introduce a propositional logic with a non-harmonious connective sup and show that its proof language forms the core of a quantum programming language.},
+  bibsource = qplbib
+}
+
+@inproceedings{DiazCaro2022,
+  title     = {A Quick Overview on the Quantum Control Approach to the Lambda Calculus},
+  author    = {D{\'i}az-Caro, Alejandro},
+  date      = {2022-04},
+  booktitle = {Proceedings of the 16th Workshop on Logical and Semantic Frameworks with Applications (LSFA), Buenos Aires, Argentina (Online), Juky 23--24, 2021},
+  editor    = {Ayala-Rincon, Mauricio and Bonelli, Eduardo},
+  publisher = opa,
+  address   = {Waterloo, NSW, Australia},
+  series    = eptcs,
+  volume    = {357},
+  pages     = {1--17},
+  doi       = {10.4204/eptcs.357.1},
+  abstract  = {In this short overview, we start with the basics of quantum computing, explaining the difference between the quantum and the classical control paradigms. We give an overview of the quantum control line of research within the lambda calculus, ranging from untyped calculi up to categorical and realisability models. This is a summary of the last 10+ years of research in this area, starting from Arrighi and Dowek's seminal work until today.},
+  bibsource = qplbib
+}
+
+@article{DiazCaro2022a,
+  title        = {Quantum Control in the Unitary Sphere: Lambda-S1 and its Categorical Model},
+  author       = {D{\'i}az-Caro, Alejandro and Malherbe, Octavio},
+  date         = {2022-09},
+  journaltitle = lmcs,
+  volume       = {18},
+  number       = {3},
+  eid          = {32},
+  doi          = {10.46298/lmcs-18(3:32)2022},
+  abstract     = {In a recent paper, a realizability technique has been used to give a semantics of a quantum lambda calculus. Such a technique gives rise to an infinite number of valid typing rules, without giving preference to any subset of those. In this paper, we introduce a valid subset of typing rules, defining an expressive enough quantum calculus. Then, we propose a categorical semantics for it. Such a semantics consists of an adjunction between the category of distributive-action spaces of value distributions (that is, linear combinations of values in the lambda calculus), and the category of sets of value distributions.},
+  bibsource    = qplbib
+}
+
 @misc{Echenim2021,
   title      = {Quantum projective measurements and the {CHSH} inequality in Isabelle/HOL},
   author     = {Echenim, Mnacho and Mhalla, Mehdi},
