--- a/bbt.bib
+++ b/bbt.bib
@@ -633,22 +633,20 @@
 }
 
 @inproceedings{DiazCaro2011,
-  title         = {Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits},
-  author        = {D{\'i}az-Caro, Alejandro and Arrighi, Pablo and Gadella, Manuel and Grattage, Jonathan},
-  year          = {2011},
-  month         = feb,
-  booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
-  publisher     = {Elsevier},
-  series        = entcs,
-  volume        = {270},
-  number        = {1},
-  pages         = {59--74},
-  doi           = {10.1016/j.entcs.2011.01.006},
-  archiveprefix = {arXiv},
-  eprint        = {},
-  abstract      = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
-  keywords      = {measurement, quantum lambda calculus, confluence, probabilistic rewrite system},
-  bibsource     = qplbib
+  title     = {Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits},
+  author    = {D{\'i}az-Caro, Alejandro and Arrighi, Pablo and Gadella, Manuel and Grattage, Jonathan},
+  year      = {2011},
+  month     = feb,
+  booktitle = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
+  publisher = {Elsevier},
+  series    = entcs,
+  volume    = {270},
+  number    = {1},
+  pages     = {59--74},
+  doi       = {10.1016/j.entcs.2011.01.006},
+  abstract  = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
+  keywords  = {measurement, quantum lambda calculus, confluence, probabilistic rewrite system},
+  bibsource = qplbib
 }
 
 @inproceedings{DiazCaro2017,
@@ -665,7 +663,7 @@
   pages     = {281--293},
   doi       = {10.1007/978-3-319-71069-3_22},
   abstract  = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
-  keywords  = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
+  keywords  = {quantum computing, lambda calculus, algebraic linearity, linear logic, measurement},
   bibsource = qplbib
 }
 
@@ -682,7 +680,7 @@
   volume    = {10695},
   pages     = {448--467},
   doi       = {10.1007/978-3-319-71237-6_22},
-  abstract  = {In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, $\lambda_\rho$, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for programs as density matrices and functions upon them. The second one, $\lambda^\circ_\rho$, take advantage of the density matrices presentation in order to follow the mixed trace of programs in a kind of generalised density matrix. Such a control can be seen as a weaker form of the quantum control and data approach.},
+  abstract  = {In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, 𝜆𝜌, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for programs as density matrices and functions upon them. The second one, 𝜆∘𝜌, take advantage of the density matrices presentation in order to follow the mixed trace of programs in a kind of generalised density matrix. Such a control can be seen as a weaker form of the quantum control and data approach.},
   keywords  = {lambda calculus, quantum computing, density matrices, classical control},
   bibsource = qplbib
 }
@@ -704,24 +702,27 @@
   eprint        = {1904.08785},
   abstract      = {In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a notion of unitarity in the system, answering a long standing issue. We derive from the semantics a set of typing rules for a simply-typed linear algebraic lambda-calculus, and show how it extends both to classical and quantum lambda-calculi.},
   keywords      = {lambda calculus, linear algebra, realizability,
-                   typing rules, simply-typed linear algebraic lambda-calculus, classical lambda-calculi, quantum lambda-calculi, unitary},
+                   classical lambda-calculi, quantum lambda-calculi, unitary},
   bibsource     = qplbib
 }
 
 @article{DiazCaro2019a,
-  title     = {Two linearities for quantum computing in the lambda calculus},
-  author    = {D{\'i}az-Caro, Alejandro and Dowek, Gilles and Rinaldi, Juan Pablo},
-  year      = {2019},
-  month     = dec,
-  journal   = {Biosystems},
-  volume    = {186},
-  eid       = {104012},
-  pages     = {104012},
-  doi       = {10.1016/j.biosystems.2019.104012},
-  abstract  = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
-  keywords  = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
-  note      = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
-  bibsource = qplbib
+  title         = {Two linearities for quantum computing in the lambda calculus},
+  author        = {D{\'i}az-Caro, Alejandro and Dowek, Gilles and Rinaldi, Juan Pablo},
+  year          = {2019},
+  month         = dec,
+  journal       = {Biosystems},
+  volume        = {186},
+  eid           = {104012},
+  pages         = {104012},
+  doi           = {10.1016/j.biosystems.2019.104012},
+  archiveprefix = {arXiv},
+  eprint        = {1601.04294},
+  abstract      = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
+  keywords      = {quantum computing, lambda calculus, algebraic linearity, linear logic, measurement},
+  note          = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
+  webnote       = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
+  bibsource     = qplbib
 }
 
 @inproceedings{DiazCaro2021,
