--- a/biblatex.bib
+++ b/biblatex.bib
@@ -590,21 +590,19 @@
 }
 
 @inproceedings{DiazCaro2011,
-  title         = {Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits},
-  author        = {D{\'i}az-Caro, Alejandro and Arrighi, Pablo and Gadella, Manuel and Grattage, Jonathan},
-  date          = {2011-02},
-  booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
-  publisher     = {Elsevier},
-  series        = entcs,
-  volume        = {270},
-  number        = {1},
-  pages         = {59--74},
-  doi           = {10.1016/j.entcs.2011.01.006},
-  archiveprefix = {arXiv},
-  eprint        = {},
-  abstract      = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
-  keywords      = {measurement, quantum lambda calculus, confluence, probabilistic rewrite system},
-  bibsource     = qplbib
+  title     = {Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits},
+  author    = {D{\'i}az-Caro, Alejandro and Arrighi, Pablo and Gadella, Manuel and Grattage, Jonathan},
+  date      = {2011-02},
+  booktitle = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
+  publisher = {Elsevier},
+  series    = entcs,
+  volume    = {270},
+  number    = {1},
+  pages     = {59--74},
+  doi       = {10.1016/j.entcs.2011.01.006},
+  abstract  = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
+  keywords  = {measurement, quantum lambda calculus, confluence, probabilistic rewrite system},
+  bibsource = qplbib
 }
 
 @inproceedings{DiazCaro2017,
@@ -620,7 +618,7 @@
   pages     = {281--293},
   doi       = {10.1007/978-3-319-71069-3_22},
   abstract  = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
-  keywords  = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
+  keywords  = {quantum computing, lambda calculus, algebraic linearity, linear logic, measurement},
   bibsource = qplbib
 }
 
@@ -636,27 +634,27 @@
   volume    = {10695},
   pages     = {448--467},
   doi       = {10.1007/978-3-319-71237-6_22},
-  abstract  = {In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, $\lambda_\rho$, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for programs as density matrices and functions upon them. The second one, $\lambda^\circ_\rho$, take advantage of the density matrices presentation in order to follow the mixed trace of programs in a kind of generalised density matrix. Such a control can be seen as a weaker form of the quantum control and data approach.},
+  abstract  = {In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, 𝜆𝜌, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for programs as density matrices and functions upon them. The second one, 𝜆∘𝜌, take advantage of the density matrices presentation in order to follow the mixed trace of programs in a kind of generalised density matrix. Such a control can be seen as a weaker form of the quantum control and data approach.},
   keywords  = {lambda calculus, quantum computing, density matrices, classical control},
   bibsource = qplbib
 }
 
 @inproceedings{DiazCaro2019,
-  title         = {Realizability in the Unitary Sphere},
-  author        = {D{\'i}az-Caro, Alejandro and Guillermo, Mauricio and Miquel, Alexandre and Valiron, Beno{\^i}t},
-  date          = {2019-06},
-  booktitle     = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
-  publisher     = ieee,
-  address       = {Los Alamitos, CA, USA},
-  series        = {{{LICS}} '19},
-  eid           = {56},
-  doi           = {10.1109/LICS.2019.8785834},
-  archiveprefix = {arXiv},
-  eprint        = {1904.08785},
-  abstract      = {In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a notion of unitarity in the system, answering a long standing issue. We derive from the semantics a set of typing rules for a simply-typed linear algebraic lambda-calculus, and show how it extends both to classical and quantum lambda-calculi.},
-  keywords      = {lambda calculus, linear algebra, realizability,
-                   typing rules, simply-typed linear algebraic lambda-calculus, classical lambda-calculi, quantum lambda-calculi, unitary},
-  bibsource     = qplbib
+  title      = {Realizability in the Unitary Sphere},
+  author     = {D{\'i}az-Caro, Alejandro and Guillermo, Mauricio and Miquel, Alexandre and Valiron, Beno{\^i}t},
+  date       = {2019-06},
+  booktitle  = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
+  publisher  = ieee,
+  address    = {Los Alamitos, CA, USA},
+  series     = {{{LICS}} '19},
+  eid        = {56},
+  doi        = {10.1109/LICS.2019.8785834},
+  eprinttype = {arXiv},
+  eprint     = {1904.08785},
+  abstract   = {In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a notion of unitarity in the system, answering a long standing issue. We derive from the semantics a set of typing rules for a simply-typed linear algebraic lambda-calculus, and show how it extends both to classical and quantum lambda-calculi.},
+  keywords   = {lambda calculus, linear algebra, realizability,
+                classical lambda-calculi, quantum lambda-calculi, unitary},
+  bibsource  = qplbib
 }
 
 @article{DiazCaro2019a,
@@ -667,9 +665,12 @@
   volume       = {186},
   eid          = {104012},
   doi          = {10.1016/j.biosystems.2019.104012},
+  eprinttype   = {arXiv},
+  eprint       = {1601.04294},
   abstract     = {We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by defining a quantum extension of first-order simply-typed lambda-calculus, where the type is linear on superposition, while allows cloning base vectors. In addition, we provide an interpretation of the calculus where superposed types are interpreted as vector spaces and non-superposed types as their basis.},
-  keywords     = {quantum computing, lambda-calculus, algebraic linearity, linear logic, measurement},
+  keywords     = {quantum computing, lambda calculus, algebraic linearity, linear logic, measurement},
   note         = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
+  webnote      = {Selected papers from the International Conference on the Theory and Practice of Natural Computing (TPNC) 2017},
   bibsource    = qplbib
 }
 
@@ -810,22 +811,22 @@
 }
 
 @article{Fu2022,
-  title         = {Proto-Quipper with dynamic lifting},
-  author        = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
-  date          = {2022-04},
-  journaltitle  = pacmpl,
-  volume        = {7},
-  number        = {POPL},
-  eid           = {},
-  doi           = {},
-  archiveprefix = {arXiv},
-  eprint        = {2204.13041},
-  url           = {https://gitlab.com/frank-peng-fu/dpq-remake},
-  abstract      = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting. A concrete categorical model is given in a companion paper [FKRS2022b].},
-  keywords      = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper},
-  note          = {To appear at POPL '23.},
-  webnote       = {See the companion paper \cite{Fu2022a}},
-  bibsource     = qplbib
+  title        = {Proto-Quipper with dynamic lifting},
+  author       = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
+  date         = {2022-04},
+  journaltitle = pacmpl,
+  volume       = {7},
+  number       = {POPL},
+  eid          = {},
+  doi          = {},
+  eprinttype   = {arXiv},
+  eprint       = {2204.13041},
+  url          = {https://gitlab.com/frank-peng-fu/dpq-remake},
+  abstract     = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting. A concrete categorical model is given in a companion paper [FKRS2022b].},
+  keywords     = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper},
+  note         = {To appear at POPL '23.},
+  webnote      = {See the companion paper \cite{Fu2022a}},
+  bibsource    = qplbib
 }
 
 @inproceedings{Fu2022a,
@@ -1439,21 +1440,21 @@
 }
 
 @article{Li2022,
-  title         = {Verified Compilation of Quantum Oracles},
-  author        = {Li, Liyi and Voichick, Finn and Hietala, Kesha and Peng, Yuxiang and Wu, Xiaodi and Hicks, Michael},
-  date          = {2022-10},
-  journaltitle  = pacmpl,
-  volume        = {6},
-  number        = {OOPSLA2},
-  eid           = {146},
-  doi           = {10.1145/3563309},
-  archiveprefix = {arXiv},
-  eprint        = {2112.06700},
-  url           = {https://github.com/inQWIRE/VQO},
-  abstract      = {Quantum algorithms often apply classical operations, such as arithmetic or predicate checks, over a quantum superposition of classical data; these so-called oracles are often the largest components of a quantum program. To ease the construction of efficient, correct oracle functions, this paper presents VQO, a high-assurance framework implemented with the Coq proof assistant. The core of VQO is OQASM, the oracle quantum assembly language. OQASM operations move qubits between two different bases via the quantum Fourier transform, thus admitting important optimizations, but without inducing entanglement and the exponential blowup that comes with it. OQASM's design enabled us to prove correct VQO's compilers—from a simple imperative language called OQIMP to OQASM, and from OQASM to SQIR, a general-purpose quantum assembly language—and allowed us to efficiently test properties of OQASM programs using the QuickChick property-based testing framework. We have used VQO to implement a variety of arithmetic and geometric operators that are building blocks for important oracles, including those used in Shor's and Grover's algorithms. We found that VQO's QFT-based arithmetic oracles require fewer qubits, sometimes substantially fewer, than those constructed using ``classical'' gates; VQO's versions of the latter were nevertheless on par with or better than (in terms of both qubit and gate counts) oracles produced by Quipper, a state-of-the-art but unverified quantum programming platform.},
-  keywords      = {quantum oracle, type system, compiler verification, programming language design},
-  webnote       = {OOPSLA '22. See arXiv version for full paper with appendix.},
-  bibsource     = qplbib
+  title        = {Verified Compilation of Quantum Oracles},
+  author       = {Li, Liyi and Voichick, Finn and Hietala, Kesha and Peng, Yuxiang and Wu, Xiaodi and Hicks, Michael},
+  date         = {2022-10},
+  journaltitle = pacmpl,
+  volume       = {6},
+  number       = {OOPSLA2},
+  eid          = {146},
+  doi          = {10.1145/3563309},
+  eprinttype   = {arXiv},
+  eprint       = {2112.06700},
+  url          = {https://github.com/inQWIRE/VQO},
+  abstract     = {Quantum algorithms often apply classical operations, such as arithmetic or predicate checks, over a quantum superposition of classical data; these so-called oracles are often the largest components of a quantum program. To ease the construction of efficient, correct oracle functions, this paper presents VQO, a high-assurance framework implemented with the Coq proof assistant. The core of VQO is OQASM, the oracle quantum assembly language. OQASM operations move qubits between two different bases via the quantum Fourier transform, thus admitting important optimizations, but without inducing entanglement and the exponential blowup that comes with it. OQASM's design enabled us to prove correct VQO's compilers—from a simple imperative language called OQIMP to OQASM, and from OQASM to SQIR, a general-purpose quantum assembly language—and allowed us to efficiently test properties of OQASM programs using the QuickChick property-based testing framework. We have used VQO to implement a variety of arithmetic and geometric operators that are building blocks for important oracles, including those used in Shor's and Grover's algorithms. We found that VQO's QFT-based arithmetic oracles require fewer qubits, sometimes substantially fewer, than those constructed using ``classical'' gates; VQO's versions of the latter were nevertheless on par with or better than (in terms of both qubit and gate counts) oracles produced by Quipper, a state-of-the-art but unverified quantum programming platform.},
+  keywords     = {quantum oracle, type system, compiler verification, programming language design},
+  webnote      = {OOPSLA '22. See arXiv version for full paper with appendix.},
+  bibsource    = qplbib
 }
 
 @inproceedings{Lindenhovius2018,
@@ -2504,22 +2505,22 @@
 }
 
 @article{Voichick2023,
-  title         = {Qunity: A Unified Language for Quantum and Classical Computing},
-  author        = {Voichick, Finn and Li, Liyi and Rand, Robert and Hicks, Michael},
-  date          = {2022-04},
-  journaltitle  = pacmpl,
-  volume        = {7},
-  number        = {POPL},
-  eid           = {},
-  doi           = {},
-  archiveprefix = {arXiv},
-  eprint        = {2204.12384},
-  url           = {https://gitlab.umiacs.umd.edu/finn/qunity},
-  abstract      = {We introduce Qunity, a new quantum programming language designed to treat quantum computing as a natural generalization of classical computing. Qunity presents a unified syntax where familiar programming constructs can have both quantum and classical effects. For example, one can use sum types to implement the direct sum of linear operators, exception handling syntax to implement projective measurements, and aliasing to induce entanglement. Further, Qunity takes advantage of the overlooked BQP subroutine theorem, allowing one to construct reversible subroutines from irreversible quantum algorithms through the uncomputation of "garbage" outputs. Unlike existing languages that enable quantum aspects with separate add-ons (like a classical language with quantum gates bolted on), Qunity provides a unified syntax along with a novel denotational semantics that guarantees that programs are quantum mechanically valid. We present Qunity's syntax, type system, and denotational semantics, showing how it can cleanly express several quantum algorithms. We also detail how Qunity can be compiled to a low-level qubit circuit language like OpenQASM, proving the realizability of our design.},
-  keywords      = {},
-  note          = {To appear at POPL '23.},
-  webnote       = {See extended version on arXiv.},
-  bibsource     = qplbib
+  title        = {Qunity: A Unified Language for Quantum and Classical Computing},
+  author       = {Voichick, Finn and Li, Liyi and Rand, Robert and Hicks, Michael},
+  date         = {2022-04},
+  journaltitle = pacmpl,
+  volume       = {7},
+  number       = {POPL},
+  eid          = {},
+  doi          = {},
+  eprinttype   = {arXiv},
+  eprint       = {2204.12384},
+  url          = {https://gitlab.umiacs.umd.edu/finn/qunity},
+  abstract     = {We introduce Qunity, a new quantum programming language designed to treat quantum computing as a natural generalization of classical computing. Qunity presents a unified syntax where familiar programming constructs can have both quantum and classical effects. For example, one can use sum types to implement the direct sum of linear operators, exception handling syntax to implement projective measurements, and aliasing to induce entanglement. Further, Qunity takes advantage of the overlooked BQP subroutine theorem, allowing one to construct reversible subroutines from irreversible quantum algorithms through the uncomputation of "garbage" outputs. Unlike existing languages that enable quantum aspects with separate add-ons (like a classical language with quantum gates bolted on), Qunity provides a unified syntax along with a novel denotational semantics that guarantees that programs are quantum mechanically valid. We present Qunity's syntax, type system, and denotational semantics, showing how it can cleanly express several quantum algorithms. We also detail how Qunity can be compiled to a low-level qubit circuit language like OpenQASM, proving the realizability of our design.},
+  keywords     = {},
+  note         = {To appear at POPL '23.},
+  webnote      = {See extended version on arXiv.},
+  bibsource    = qplbib
 }
 
 @misc{Wecker2014,
@@ -2832,21 +2833,21 @@
 }
 
 @article{Zhou2023,
-  title         = {CoqQ: Foundational Verification of Quantum Programs},
-  author        = {Zhou, Li and Barthe, Gilles and Strub, Pierre-Yves and Liu, Junyi and Ying, Mingsheng},
-  date          = {2022-07},
-  journaltitle  = pacmpl,
-  volume        = {7},
-  number        = {POPL},
-  eid           = {},
-  doi           = {},
-  archiveprefix = {arXiv},
-  eprint        = {2207.11350},
-  url           = {https://github.com/coq-quantum/CoqQ},
-  abstract      = {CoqQ is a framework for reasoning about quantum programs in the Coq proof assistant. Its main components are: a deeply embedded quantum programming language, in which classic quantum algorithms are easily expressed, and an expressive program logic for proving properties of programs. CoqQ is foundational: the program logic is formally proved sound with respect to a denotational semantics based on state-of-art mathematical libraries (mathcomp and mathcomp analysis). CoqQ is also practical: assertions can use Dirac expressions, which eases concise specifications, and proofs can exploit local and parallel reasoning, which minimizes verification effort. We illustrate the applicability of CoqQ with many examples from the literature.},
-  keywords      = {quantum programs, program logics, proof assistants, mathematical libraries},
-  note          = {To appear at POPL '23.},
-  bibsource     = qplbib
+  title        = {CoqQ: Foundational Verification of Quantum Programs},
+  author       = {Zhou, Li and Barthe, Gilles and Strub, Pierre-Yves and Liu, Junyi and Ying, Mingsheng},
+  date         = {2022-07},
+  journaltitle = pacmpl,
+  volume       = {7},
+  number       = {POPL},
+  eid          = {},
+  doi          = {},
+  eprinttype   = {arXiv},
+  eprint       = {2207.11350},
+  url          = {https://github.com/coq-quantum/CoqQ},
+  abstract     = {CoqQ is a framework for reasoning about quantum programs in the Coq proof assistant. Its main components are: a deeply embedded quantum programming language, in which classic quantum algorithms are easily expressed, and an expressive program logic for proving properties of programs. CoqQ is foundational: the program logic is formally proved sound with respect to a denotational semantics based on state-of-art mathematical libraries (mathcomp and mathcomp analysis). CoqQ is also practical: assertions can use Dirac expressions, which eases concise specifications, and proofs can exploit local and parallel reasoning, which minimizes verification effort. We illustrate the applicability of CoqQ with many examples from the literature.},
+  keywords     = {quantum programs, program logics, proof assistants, mathematical libraries},
+  note         = {To appear at POPL '23.},
+  bibsource    = qplbib
 }
 
 @article{Zorzi2019,
