Bibtex Warning--can't use both volume and number fields

--- a/biblatex.bib
+++ b/biblatex.bib
@@ -596,8 +596,7 @@
   booktitle = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
   publisher = {Elsevier},
   series    = entcs,
-  volume    = {270},
-  number    = {1},
+  volume    = {270/1},
   pages     = {59--74},
   doi       = {10.1016/j.entcs.2011.01.006},
   abstract  = {This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other languages. The method described here may be applied to probabilistic rewrite systems in general, and to add measurement to more complex languages such as QML [Grattage, J. and T. Altenkirch, A functional quantum programming language, in: LICS '05: Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science (2005), pp. 249--258] or Lineal [Arrighi, P. and G. Dowek, A computational definition of the notion of vectorial space, Electronic Notes in Theoretical Computer Science 117 (2005), pp. 249--261; Arrighi, P. and G. Dowek, Linear-algebraic lambda-calculus: higher-order, encodings and confluence, in: B. Buchberger, editor, Term Rewriting and Applications, 19th International Conference, RTA-08, To appear in LNCS (2008), eprint available at arXiv:quant-ph/0612199], which is the subject of further research.},
@@ -943,7 +942,7 @@
   booktitle  = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
   publisher  = {Elsevier},
   series     = entcs,
-  volume     = {270},
+  volume     = {270/1},
   pages      = {165--174},
   doi        = {10.1016/j.entcs.2011.01.015},
   eprinttype = {arXiv},
