Finalize POPL '23 papers

--- a/biblatex.bib
+++ b/biblatex.bib
@@ -811,22 +811,21 @@
   bibsource  = qplbib
 }
 
-@article{Fu2022,
-  title        = {Proto-Quipper with dynamic lifting},
+@article{Fu2023,
+  title        = {Proto-Quipper with Dynamic Lifting},
   author       = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
-  date         = {2022-04},
+  date         = {2023-01},
   journaltitle = pacmpl,
   volume       = {7},
   number       = {POPL},
-  eid          = {},
-  doi          = {},
+  eid          = {11},
+  doi          = {10.1145/3571204},
   eprinttype   = {arXiv},
   eprint       = {2204.13041},
   url          = {https://gitlab.com/frank-peng-fu/dpq-remake},
-  abstract     = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting. A concrete categorical model is given in a companion paper [FKRS2022b].},
-  keywords     = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper},
-  note         = {To appear at POPL '23.},
-  webnote      = {See the companion paper \cite{Fu2022a}},
+  abstract     = {Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is present in Quipper. By virtue of being a circuit description language, Proto-Quipper has two separate runtimes: circuit generation time and circuit execution time. Values that are known at circuit generation time are called parameters, and values that are known at circuit execution time are called states. Dynamic lifting is an operation that enables a state, such as the result of a measurement, to be lifted to a parameter, where it can influence the generation of the next portion of the circuit. As a result, dynamic lifting enables Proto-Quipper programs to interleave classical and quantum computation. We describe the syntax of a language we call Proto-Quipper-Dyn. Its type system uses a system of modalities to keep track of the use of dynamic lifting. We also provide an operational semantics, as well as an abstract categorical semantics for dynamic lifting based on enriched category theory. We prove that both the type system and the operational semantics are sound with respect to our categorical semantics. Finally, we give some examples of Proto-Quipper-Dyn programs that make essential use of dynamic lifting.},
+  keywords     = {proto-quipper-dyn, proto-quipper-m, proto-quipper, quipper, quantum programming languages, categorical semantics, dynamic lifting},
+  webnote      = {Also see the companion paper \cite{Fu2022a}},
   bibsource    = qplbib
 }
 
@@ -2508,18 +2507,17 @@
 @article{Voichick2023,
   title        = {Qunity: A Unified Language for Quantum and Classical Computing},
   author       = {Voichick, Finn and Li, Liyi and Rand, Robert and Hicks, Michael},
-  date         = {2022-04},
+  date         = {2023-01},
   journaltitle = pacmpl,
   volume       = {7},
   number       = {POPL},
-  eid          = {},
-  doi          = {},
+  eid          = {32},
+  doi          = {10.1145/3571225},
   eprinttype   = {arXiv},
   eprint       = {2204.12384},
   url          = {https://gitlab.umiacs.umd.edu/finn/qunity},
   abstract     = {We introduce Qunity, a new quantum programming language designed to treat quantum computing as a natural generalization of classical computing. Qunity presents a unified syntax where familiar programming constructs can have both quantum and classical effects. For example, one can use sum types to implement the direct sum of linear operators, exception handling syntax to implement projective measurements, and aliasing to induce entanglement. Further, Qunity takes advantage of the overlooked BQP subroutine theorem, allowing one to construct reversible subroutines from irreversible quantum algorithms through the uncomputation of "garbage" outputs. Unlike existing languages that enable quantum aspects with separate add-ons (like a classical language with quantum gates bolted on), Qunity provides a unified syntax along with a novel denotational semantics that guarantees that programs are quantum mechanically valid. We present Qunity's syntax, type system, and denotational semantics, showing how it can cleanly express several quantum algorithms. We also detail how Qunity can be compiled to a low-level qubit circuit language like OpenQASM, proving the realizability of our design.},
-  keywords     = {},
-  note         = {To appear at POPL '23.},
+  keywords     = {algebraic data types, reversible computing, quantum subroutines, kraus operators},
   webnote      = {See extended version on arXiv.},
   bibsource    = qplbib
 }
@@ -2836,12 +2834,12 @@
 @article{Zhou2023,
   title        = {CoqQ: Foundational Verification of Quantum Programs},
   author       = {Zhou, Li and Barthe, Gilles and Strub, Pierre-Yves and Liu, Junyi and Ying, Mingsheng},
-  date         = {2022-07},
+  date         = {2023-01},
   journaltitle = pacmpl,
   volume       = {7},
   number       = {POPL},
-  eid          = {},
-  doi          = {},
+  eid          = {29},
+  doi          = {10.1145/3571222},
   eprinttype   = {arXiv},
   eprint       = {2207.11350},
   url          = {https://github.com/coq-quantum/CoqQ},
